0.03
 - Add Item class.
 - Add Option tests.
 - Add doc for Utils.
 - Another fix of Form processing.
 - Fix CSS processing in Form.
 - Fix doc in Form.
 - Fix doc in Option.
 - Fix module abstract.
 - Implement Utils::tags_label().
 - Rename variable in Utils.
 - Rewrite Input to use helpers.
 - Update copyright years.

0.02 2024-01-07T00:39:59+01:00
 - Add Utils module with helpers.
 - Add tests for A.
 - Fix A serialization for Tags structure.
 - Fix test dependencies.
 - Regen examples.
 - Remove obsolete code from tests.

0.01 2024-01-06T19:36:50+01:00
 - First version.