@@ -8,6 +8,7 @@
  - Fix doc in Option.
  - Fix module abstract.
  - Implement Utils::tags_label().
+ - Improve A element output.
  - Rename variable in Utils.
  - Rewrite Input to use helpers.
  - Update copyright years.
